--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,11 +1,11 @@
-.computer {
+/* .computer {
   margin-top: 10%;
   width: 600px;
   z-index: -1;
   position: absolute;
-}
+} */
 
-.buttonLight {
+/* .buttonLight {
   position: fixed;
   width: 100px;
   height: 40px;
@@ -16,13 +16,13 @@
   display: flex;
   text-align: center;
   font-weight: bold;
-}
+} */
 
-.buttonLight:hover {
+/* .buttonLight:hover {
   cursor: pointer;
-}
+} */
 
-.container {
+/* .container {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -33,26 +33,26 @@
   width: 85%;
   height: 100vh;
   justify-content: space-evenly;
-}
+} */
 
 .text {
-  color: #5a84a2;
+  /* color: #5a84a2;
   font-size: 3rem;
   font-weight: bold;
   width: 0;
   white-space: nowrap;
-  overflow: hidden;
+  overflow: hidden; */
   animation: typing steps(90, end) forwards infinite 6s;
 }
 
-.buttons {
+/* .buttons {
   display: flex;
   align-items: center;
   justify-content: center;
   width: 80%;
-}
+} */
 
-.button {
+/* .button {
   margin-left: 2.5%;
   margin-right: 2.5%;
   width: 100px;
@@ -77,7 +77,7 @@
   transform: scale(0.98);
   border: solid 1px black;
   font-size: 0.9rem;
-}
+} */
 
 @keyframes typing {
   0% {
