--- a/src/components/Studies/Studies.css
+++ b/src/components/Studies/Studies.css
@@ -65,7 +65,7 @@
 .card {
   position: relative;
   margin-top: 2%;
-  width: 30%;
+  /* width: 30%; */
   height: 50vh;
 }
 
@@ -81,7 +81,7 @@
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
-  overflow: hidden;
+  /* overflow: hidden; */
   transition: 0.5s;
 }
 
